# BsdiffDemo

./: README.md  local.properties
app/: build.gradle
app/src/androidTest/java/com/ice/bsdiffwangyi/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/ice/bsdiffwangyi/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/ice/bsdiffwangyi/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
